<resources>
    <string name="app_name">ApplicationAll</string>
    <string name="back">Back</string>
    <string name="_13">13+</string>
    <string name="avengers_nend_game">Avengers:\nEnd Game</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_review">125 REVIEW</string>
    <string name="storyline">Storyline</string>
    <string name="Mega_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purpose">Purpose</string>
    <string name="movies_list">Movies list</string>
    <string name="movie">Movie</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_137_min">137 MIN</string>
    <string name="face">face</string>
</resources>