<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/mask"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="229dp"
            android:src="@drawable/ic_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/arrow"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="@+id/arrow" />

        <TextView
            android:id="@+id/plus13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="56dp"
            android:text="@string/_13"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/banner"
            app:layout_constraintStart_toStartOf="@+id/banner" />

        <TextView
            android:id="@+id/avengers_end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="16dp"
            android:text="@string/avengers_nend_game"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/banner" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="343dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="#FF3466"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avengers_end_game" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon_gray"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:text="@string/_125_review"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/star5"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <TextView
            android:id="@+id/storyLine"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review" />

        <TextView
            android:id="@+id/megaText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Mega_text"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyLine" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/megaText" />

        <ImageView
            android:id="@+id/robert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/actor"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/chris"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:layout_constraintHorizontal_chainStyle="spread"
            />

        <ImageView
            android:id="@+id/chris"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/actor_1"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@+id/mark"
            app:layout_constraintStart_toEndOf="@id/robert"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/mark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/actor_2"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@+id/chris2"
            app:layout_constraintStart_toEndOf="@id/chris"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/chris2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="0dp"
            android:src="@drawable/actor_3"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@+id/guideline1"
            app:layout_constraintStart_toEndOf="@id/mark"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <TextView
            android:id="@+id/robertText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/robert"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="@id/robert"/>

        <TextView
            android:id="@+id/chrisText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/chris_evans"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/chris"
            app:layout_constraintStart_toStartOf="@id/chris"
            app:layout_constraintEnd_toEndOf="@id/chris"
            />

        <TextView
            android:id="@+id/markText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/mark"
            app:layout_constraintStart_toStartOf="@id/mark"
            app:layout_constraintEnd_toEndOf="@id/mark" />

        <TextView
            android:id="@+id/chris2Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/chris2"
            app:layout_constraintStart_toStartOf="@id/chris2"
            app:layout_constraintEnd_toEndOf="@id/chris2"
            app:layout_constraintHorizontal_bias="0.0"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>