<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:src="@drawable/combined_shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/purpose" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/movies_list"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/purpose"
            app:layout_constraintStart_toEndOf="@+id/purpose"
            app:layout_constraintTop_toTopOf="@+id/purpose" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/movie"
            android:src="@drawable/bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purpose" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="48dp"
            android:src="@drawable/movie__4_"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="48dp"
            android:src="@drawable/mask2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="264dp"
            android:src="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="269dp"
            android:src="@drawable/like"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="146dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="70dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="#FF3466"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="154dp"
            android:layout_marginBottom="58dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_icon_gray"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="53dp"
            android:layout_height="12dp"
            android:layout_marginStart="6dp"
            android:text="@string/_125_review"
            android:textColor="#6D6D80"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />

        <TextView
            android:layout_width="132dp"
            android:layout_height="20dp"
            android:textSize="13.5sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/avengers_end_game"
            android:textColor="#ECECEC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="154dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_137_min"
            android:textColor="#565665"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>