<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="11dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/movie"
        android:src="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/photo_avengers"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/mask2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/age_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/_13"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/age_background"
        app:layout_constraintEnd_toEndOf="@+id/age_background"
        app:layout_constraintStart_toStartOf="@+id/age_background"
        app:layout_constraintTop_toTopOf="@+id/age_background" />

    <ImageView
        android:id="@+id/grey_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="269dp"
        android:src="@drawable/like_grey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="269dp"
        android:visibility="invisible"
        android:src="@drawable/like"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="146dp"
        android:layout_height="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="#FF3466"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="58dp"
        android:src="@drawable/ic_star_icon_gray"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_gray"
        app:layout_constraintBottom_toBottomOf="@+id/star1"
        app:layout_constraintStart_toEndOf="@+id/star1"
        app:layout_constraintTop_toTopOf="@+id/star1" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_gray"
        app:layout_constraintBottom_toBottomOf="@+id/star2"
        app:layout_constraintStart_toEndOf="@+id/star2"
        app:layout_constraintTop_toTopOf="@+id/star2" />

    <ImageView
        android:id="@+id/star4"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_gray"
        app:layout_constraintBottom_toBottomOf="@+id/star3"
        app:layout_constraintStart_toEndOf="@+id/star3"
        app:layout_constraintTop_toTopOf="@+id/star3" />

    <ImageView
        android:id="@+id/star5"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/ic_star_icon_gray"
        app:layout_constraintBottom_toBottomOf="@+id/star4"
        app:layout_constraintStart_toEndOf="@+id/star4"
        app:layout_constraintTop_toTopOf="@+id/star4" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="53dp"
        android:layout_height="12dp"
        android:layout_marginStart="6dp"
        android:text="@string/_125_review"
        android:textColor="#6D6D80"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/star5"
        app:layout_constraintStart_toEndOf="@+id/star5"
        app:layout_constraintTop_toTopOf="@+id/star5" />

    <TextView
        android:id="@+id/name"
        android:layout_width="132dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="30dp"
        android:text="@string/avengers_end_game"
        android:textColor="#ECECEC"
        android:textSize="13.5sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="154dp"
        android:layout_height="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_137_min"
        android:textColor="#565665"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>